<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f0f0f0"
    android:orientation="vertical"
    android:gravity="center">


    <LinearLayout
        android:id="@+id/login_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/userId_LinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal"
                android:weightSum="1">

                <!-- android:ems="10"表示EditText内最多只显示10个字符，超出不显示 -->
                <!-- android:singleLine="true"表示不能全部显示时，后面用“…”来表示 -->
                <EditText
                    android:id="@+id/login_user_Id"
                    android:layout_width="339dp"
                    android:layout_height="57dp"
                    android:layout_weight="0.80"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/idtxthint"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:singleLine="true"
                    android:textColorHint="#999999"
                    android:textSize="18sp">

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <!-- 横线  -->
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#CACDD1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal"
                android:weightSum="1">

                <EditText
                    android:id="@+id/login_user_Pwd"
                    android:layout_width="302dp"
                    android:layout_height="57dp"
                    android:layout_weight="0.95"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/pwdtxthint"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:singleLine="true"
                    android:textColorHint="#999999"
                    android:textSize="18sp"
                    android:inputType="textPassword"/>

                <ImageView
                    android:id="@+id/login_see_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dip"
                    android:background="@drawable/ic_remove_red_eye_black_24dp" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:text="@string/loginbtntext"
            android:textColor="#FFFFFF"
            android:textSize="19sp" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/rem_pwd"
                android:layout_width="99dp"
                android:layout_height="match_parent"
                android:layout_weight="1.89"
                android:text="@string/rempwd" />

            <TextView
                android:id="@+id/fast_register"
                android:layout_width="wrap_content"
                android:layout_height="30dip"
                android:layout_weight="0.10"
                android:text="@string/fastregister" />

        </LinearLayout>


    </LinearLayout>
</LinearLayout>